# EEG_analytics

./: .gitignore  ArduinoTest.ipynb  EEGExp2.ipynb  README.md  X_test.csv  Y_test.csv  arduino-test.ipynb  eeg_f_(2) (1).ipynb  lsl_data_generation.py  model.c  model.keras  model.tflite  requirements.txt
arduino-ml/: CMakeLists.txt  MHET-ESP32-DevKit.cmake
arduino-ml/src/: main.cpp  ml.cpp  ml.hpp  model.hpp  web.cpp  web.hpp  wifi_conf.hpp.in
data/: p002_MI_markers_elist_f_cf pruned with ICA_bins_impel_be.set  p002_MI_markers_elist_f_cf pruned with ICA_bins_impel_be_ar.set  test01.txt  test04.txt
eegmla/: __init__.py
